feat: add s3 storage adapter

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
 APP_PORT=8888
 APP_MODE=develop
+
+# Database
+MONGODB_URI=localhost
+
+# Minio
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=minio
+MINIO_SECRET_KEY=minio123
+MINIO_BUCKET=dev
+MINIO_REGION=us-east-1
+
