--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,4 +27,23 @@ services:
     env_file:
       - ./.env
     ports:
-      - "8888:8888"
+      - "8889:8888"
+
+  minio:
+    image: minio/minio:RELEASE.2024-01-13T07-53-03Z
+    hostname: minio
+    volumes:
+      - /data/minio/export:/minio/export
+    ports:
+      - "9003:9000"
+      - "38343:38343"
+    command: server /minio/export --console-address=0.0.0.0:38343
+    environment:
+      - MINIO_DISTRIBUTED_MODE_ENABLED=no
+      - MINIO_ROOT_USER=minio
+      - MINIO_ROOT_PASSWORD=rootroot
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://127.0.0.1:9000/minio/health/live" ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
