--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,6 @@ MINIO_ENDPOINT=localhost
 MINIO_PORT=9000
 MINIO_ACCESS_KEY=minio
 MINIO_SECRET_KEY=minio123
-MINIO_BUCKET=dev
+MINIO_BUCKET=cdn
 MINIO_REGION=us-east-1
 
